# promptorius

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  SPEC.md  default_config
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/active/: v0.1-mvp.md
src/: main.rs
src/cli/: mod.rs
src/codegen/: expr.rs  mod.rs  runtime.rs  stmt.rs
src/compiler/: mod.rs  project.rs
src/config/: mod.rs
src/host/: battery.rs  cache.rs  color.rs  command.rs  environment.rs  filesystem.rs  git.rs  mod.rs
src/lang/: ast.rs  lexer.rs  parser.rs  token.rs
src/pipeline/: mod.rs  template.rs
src/render/: mod.rs
src/script/: mod.rs
src/shell/: bash.sh  fish.fish  nushell.nu  zsh.sh
stdlib/: battery.rhai  character.rhai  directory.rhai  duration.rhai  exitcode.rhai  git.rhai  git_branch.rhai  jobs.rhai  language.rhai  time.rhai  user_host.rhai
