[package]
name = "promptorius"
version = "0.1.0"
edition = "2021"
description = "A fast, Rhai-scriptable shell prompt engine"
license = "MIT"

[dependencies]
rhai = "1"
git2 = "0.19"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
glob = "0.3"
clap = { version = "4", features = ["derive"] }
rayon = "1"
nu-ansi-term = "0.50"
dirs = "6"
unicode-width = "0.2"
thiserror = "2"
